<resources>
    <string name="app_name">Challenge 4</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Masukan Email</string>
    <string name="prompt_username">Masukan Username</string>
    <string name="prompt_password">Masukan Password</string>
    <string name="prompt_conf_password">Masukan Konfirmasi Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header_login">Login</string>
    <string name="login_button">Login</string>
    <string name="register_action">Belum punya Akun ?</string>
    <string name="header_register">Register</string>
    <string name="register_button">Daftar</string>
    <string name="desc_profile_image">profile_image</string>
</resources>